--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ body{
 }
 .box{
   position: absolute;
-  left: 10%;
+  left: 40%;
   top: 30%;
   transform: translate(-50% -50%);
   background-color: rgb(45, 50, 50);
@@ -46,6 +46,13 @@ input{
   background-color: transparent;
   border-bottom: 2px solid #fff;
   color: red;
+}
+@media (max-width: 767px) {
+  .box{
+  
+  left: 10%;
+  
+}
 }
 
     </style>
